# mcp-bridgekit

./: .commit_msg  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
docs/: INTEGRATION_GUIDE.md
examples/: aws_integration.py  fastapi_app.py  mcp_server.py
src/mcp_bridgekit/: __init__.py  app.py  auth.py  config.py  core.py  dashboard.py  events.py  landing.py  models.py  stripe.py  worker.py
templates/: architecture.html  dashboard.html
tests/: test_core.py
ts/: package.json  tsconfig.json
ts/src/: index.ts
