[project]
name = "mcp-bridgekit"
version = "0.1.0"
description = "Embeddable MCP stdio → HTTP bridge for web chatbots"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34",
    "mcp>=1.0.0",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
