[project]
name = "mcp-bridgekit"
version = "0.3.0"
description = "Embeddable MCP stdio → HTTP bridge with timeout-proof jobs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34",
    "mcp>=1.0.0",
    "redis>=5.2",
    "rq>=2.0",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "rq"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-bridgekit-worker = "mcp_bridgekit.worker:main"
